pandoc-eqnos 1.3.0 (unreleased)

    * Require pandoc-xnos>=1.0.0,<2 to ensure API compatibility
      (pandoc-fignos Issue #46).


pandoc-eqnos 1.2.0 (2018-01-14)

    * Added `eqnos-capitalise` meta variable.


pandoc-eqnos 1.1.0 (2018-01-13)

    * Added AMS-style equations referencing (Issue #27).


pandoc-eqnos 1.0.0 (2018-01-07)

    * Version number bumped to 1.0.0.


pandoc-eqnos 1.0.0rc3 (2017-12-16)

    * Write equation id in outer span; removed redundant
      "<a name=..." tag (pandoc-eqnos Issue #26).
    * Removed dependency on pandoc-attributes
      (pandoc-fignos Issue #42).


pandoc-eqnos 1.0.0rc1 (2017-11-18)

    * Release candidate updated for pandoc 2.0.


pandoc-eqnos 0.18.1 (2017-09-19)

    * Fixes for beamer (pandoc-fignos Issue #38).


pandoc-eqnos 0.17 (2017-09-19)

    * Bug fix for Word output (Issue #16).


pandoc-eqnos 0.16.1 (2017-09-12)

    * Documentation updates.


pandoc-eqnos 0.16 (2016-12-05)

    * Added numbering equations by section for html (Issue #15).


pandoc-eqnos 0.15 (2016-11-29)

    * For html, write equation numbers in a span and justify them
      right.  Before, the equation numbers were written into
      the equation.  This is a big change in approach.


pandoc-eqnos 0.14.1 (2016-11-17)

    * Python 2.7.3 bug addressed with pandoc-xnos 0.7.
    * Clarified purpose of this filter in README.md.


pandoc-eqnos 0.14 (2016-11-05)

    * Updated for pandoc 1.18 (pandoc-fignos Issue #30)


pandoc-eqnos 0.13 (2016-10-22)

    * Fixed metadata corruption bug (pandoc-fignos Issue #23).
    * Fixed python 2.7 install on Windows (pandoc-fignos Issue #27).
    * Require pandoc-xnos >= 0.5.


pandoc-eqnos 0.12.1 (2016-08-21)

    * Require pandoc-xnos >= 0.4.1


pandoc-eqnos 0.12 (2016-08-21)

    * Removed anchors and ids in output for unreferenceable figures.


pandoc-eqnos 0.11 (2016-05-15)

    * Added clever referencing.
    * Moved library code to pandocxnos project.


pandoc-eqnos 0.10 (2016-04-27)
