@@ -1,5 +1,7 @@
 
 
+**New in 1.3.0:** Boolean metadata values must now be one of `true`, `True` `TRUE`, `false`, `False`, or `FALSE`.  This is following a [change of behaviour](https://pandoc.org/releases.html#pandoc-2.2.2-16-july-2018) with pandoc 2.2.2.
+
 **New in 1.2.0:** Added `fignos-capitalise` meta variable to capitalise clever references (e.g., change "eq." to "Eq.").
 
 **New in 1.1.0:** AMS-style equation references (bracketed references) can be enabled by setting `eqnos-eqref: On` in the metadata block.
