@@ -2,6 +2,8 @@ pandoc-eqnos 1.3.0 (unreleased)
 
     * Require pandoc-xnos>=1.0.0,<2 to ensure API compatibility
       (pandoc-fignos Issue #46).
+    * Gives more helpful error message regarding acceptable
+      boolean metadata values (pandoc-fignos Issue #51).
 
 
 pandoc-eqnos 1.2.0 (2018-01-14)
